src/test/resources/org/shirolang/interpreter/errors/assign_to_internal_port.sro
node N begin
    d Double
end

n N
n.d(100.0)
